# Mercedes-Benz_demo_code

./: CMakeLists.txt  README.md  test_code.c  test_code.h
01_SampleTask/: CMakeLists.txt  main.c
L1It01_BinaryGap/: CMakeLists.txt  Solution.cpp  Solution.h  tst_Solution.cpp
L2Ar01_CyclicRotation/: main.c  solution.c  solution.h  test_cases.h
L2Ar02_OddOccurencesInArray/: solution.c
L3TC01_FrogJump/: solution.c  test_cases.c  test_cases.h
L3TC02_PermMissingElem/: solution.c
L3TC03_TapeEquilibrium/: solution.c  test_cases.c
L4CE01_FrogRiverOne/: main.c  solution.c  solution.h  test_cases.c  test_cases.h
L4CE02_PermCheck/: solution.c  test_cases.c
L4CE03_MaxCounters/: solution.c  solution.h  test_cases.c  test_cases.h
L4CE04_MissingInteger/: solution.c  test_cases.h
L5PS01_PassingCars/: solution.c  test_cases.c
L5PS02_CountDiv/: CMakeLists.txt  main.c  solution.c  solution.h  test_code.h
L5PS03_GenomicRangeQuery/: main.c  solution.c  solution.h
L5PS04_MinAvgTwoSlice/: CMakeLists.txt  main.c  solution.c  test_cases.c  test_code.c
L6SO01_Distinct/: solution.c  test_cases.c
L6SO02_MaxProductOfThree/: solution.c  test_cases.c  test_cases.h
L6SO03_Triangle/: CMakeLists.txt  main.c  solution.c  solution.h  test_cases.c  test_cases.h  test_code.c  test_code.h
L6SO04_NumberOfDiscIntersections/: solution.c  solution.h  test_cases.c
L7SQ01_Brackets/: solution.c  test_cases.c  test_cases.h
L7SQ02_Fish_stack/: main.c  solution.c  solution.h  test_cases.c  test_cases.h
L7SQ03_Nesting/: main.c  solution.c  solution.h  test_cases.c
L7SQ04_StoneWall/: main.c  solution.c  solution.h  test_cases.c  test_cases.h
L8Le04_Dominator/: solution.c  test_cases.c
sample_01/: main.c  test_code.c
sample_01a/: CMakeLists.txt  main.c  solution.c  test_cases.c  test_cases.h  test_code.c
sample_01b/: CMakeLists.txt  solution.c  solution.h  (+2 more)
sample_03b/: CMakeLists.txt  main.c  solution.c  test_code.c
sample_03e/: CMakeLists.txt  solution.c  test_cases.h  test_code.c
test1/: CMakeLists.txt  main.c  solution.c  test_cases.c  test_cases.h
(+89 files in other folders)
